.build/k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shottimer
  namespace: shottimer
  labels:
    app: shottimer
spec:
  selector:
    app: shottimer
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: metrics
      port: 9090
      targetPort: metrics
