.build/k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shottimer
  namespace: shottimer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: shottimer-force-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - secretName: shottimer-tls
      hosts:
        - shot.etys.no
  rules:
    - host: shot.etys.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shottimer
                port:
                  number: 80
